# Kinetix

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  build_warnings.txt  crash_output.txt  debug_output.txt  err2.txt  err_current.txt  err_fixed.txt  error.txt  errors.json  errors.txt  feat_run.txt  gitlog.txt  kivm_error.txt  kivm_output.txt  lsp_errors.txt  opt_metrics.txt  out_feat.txt  out_reac.txt  reac.txt  reac_run.txt  run_error.txt  run_feat.txt  run_feat_final.txt  run_out.txt  run_reac.txt  t1.txt  t2.txt  t3.txt  test_features_err.txt  test_jit.kix  test_out.txt  test_out2.txt  test_out3.txt  test_out4.txt  (+3 more)
crates/: out.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/installer/: Cargo.toml  build.rs  build_log.txt  build_log_retry.txt
crates/installer/src/: main.rs
crates/installer/target_installer/: .rustc_info.json
crates/installer/target_installer/release/.fingerprint/autocfg-e137e6ca9ebf7b6a/: lib-autocfg.json
crates/installer/target_installer/release/.fingerprint/bitflags-699f1866fbbe0bdd/: lib-bitflags  lib-bitflags.json
crates/installer/target_installer/release/.fingerprint/cfg_aliases-2939433a361467ee/: lib-cfg_aliases  lib-cfg_aliases.json
crates/installer/target_installer/release/.fingerprint/icu_normalizer_data-bb8d4c9444764fb8/: build-script-build-script-build.json
crates/installer/target_installer/release/.fingerprint/icu_properties_data-c7ffdcacd5a7be36/: build-script-build-script-build.json
crates/installer/target_installer/release/.fingerprint/litemap-893936b5aa83f82e/: lib-litemap  lib-litemap.json
crates/installer/target_installer/release/.fingerprint/log-545865ff6d4b05b0/: lib-log  lib-log.json
crates/installer/target_installer/release/.fingerprint/log-7bc6f920350cad15/: lib-log
crates/installer/target_installer/release/.fingerprint/once_cell-4473f0ff2e898309/: lib-once_cell  lib-once_cell.json
crates/installer/target_installer/release/.fingerprint/proc-macro2-464d5f7cb95712b0/: build-script-build-script-build.json
crates/installer/target_installer/release/.fingerprint/quote-a69104a210edd288/: run-build-script-build-script-build
crates/installer/target_installer/release/.fingerprint/quote-ce10a74b868b34d7/: build-script-build-script-build
crates/installer/target_installer/release/.fingerprint/stable_deref_trait-4040ccc64cb5df93/: lib-stable_deref_trait.json
crates/installer/target_installer/release/.fingerprint/ttf-parser-0cee956ddfecc8ee/: lib-ttf_parser
crates/installer/target_installer/release/.fingerprint/unicode-ident-0833855eec4bbf57/: lib-unicode_ident
crates/installer/target_installer/release/.fingerprint/version_check-ee8e209fdcb329ae/: lib-version_check.json
crates/installer/target_installer/release/.fingerprint/windows_x86_64_msvc-34ef75ae3fce6e1a/: run-build-script-build-script-build.json
crates/installer/target_installer/release/.fingerprint/windows_x86_64_msvc-f54a17579f270d5b/: build-script-build-script-build
crates/installer/target_installer/release/.fingerprint/xml-rs-eb02c990e64ebe60/: lib-xml.json
crates/installer/target_installer/release/.fingerprint/zerocopy-e53be4ad205e1cbe/: build-script-build-script-build  build-script-build-script-build.json
crates/kicomp/: Cargo.toml  build.rs
crates/kicomp/src/: benchmarks.rs  borrowck.rs  capability.rs  compiler.rs  drop_verify.rs  exhaustiveness.rs  exn.rs  hir.rs  hir_validate.rs  ir.rs  ir_hash.rs  lib.rs  llvm_codegen.rs  lsp.rs  main.rs  metrics.rs  mir.rs  mir_codegen.rs  mir_opt.rs  mono_validate.rs  monomorphize.rs  opt.rs  pattern.rs  project.rs  reactive.rs  resolver.rs  ssa_validate.rs  symbol.rs  trait_solver.rs  type_normalize.rs  typeck.rs  types.rs  vtable.rs
crates/kivm/: Cargo.toml
crates/kivm/src/: builtins.rs  lib.rs  vm.rs
crates/kivm/src/modules/: audio.rs  crypto.rs  data.rs  db.rs  graph.rs  llm.rs  mod.rs  net.rs  system.rs  term.rs
crates/kivm/tests/: mir_codegen_differential.rs
crates/language/: Cargo.toml
crates/language/src/: main.rs
crates/language/src/ast/: mod.rs
crates/language/src/lexer/: mod.rs
crates/language/src/parser/: mod.rs
scripts/: build_installer.ps1  build_linux.sh  build_macos.sh  install_prerequisites.bat  install_prerequisites.sh
tests/: _minimal_trait.exki  build19_test.kicomp  linear_fail.kix  linear_fail_fn.kix  linear_valid.kix  lsp_mock.txt  lsp_mock_error.txt  phase0_core.kix  phase3_oop.kix  phase4_defer.kix  phase4_system.kix  phase4_thread.kix  test_array_index.kix  test_break_continue.kix  test_class.exki  test_class.kix  test_error_double_borrow.kix  test_error_type_mismatch.kix  test_error_use_after_move.kix  test_errors.kix  test_fail.kix  test_features.exki  test_features.kix  test_for_loop.kix  test_jit.kix  (+5 more)
(+15 files in other folders)
