[workspace]
members = [
    "crates/language",
    "crates/kicomp",
    "crates/kivm",
    "crates/cli",
    "crates/installer"
]
default-members = [
    "crates/language",
    "crates/kicomp",
    "crates/kivm",
    "crates/cli",
]
# Installer uses include_bytes! to embed release binaries,
# build with: cargo build -p kinetix-installer --release (after cargo build --release)
resolver = "2"
