[package]
name = "kinetix-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "kivm"
path = "src/main.rs"

[dependencies]
kinetix-language = { path = "../language" }
kinetix-kicomp = { path = "../kicomp" }
kinetix-kivm = { path = "../kivm" }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
