[package]
name = "kinetix-cli"
version = "0.0.3"
edition = "2024"

[[bin]]
name = "kivm"
path = "src/main.rs"

[features]
default = []
llvm = ["kinetix-kicomp/llvm"]

[dependencies]
kinetix-language = { path = "../language" }
kinetix-kicomp = { path = "../kicomp" }
kinetix-kivm = { path = "../kivm" }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
directories = "5"
bumpalo = { version = "3", features = ["collections"] }
