[package]
name = "kinetix-installer"
version = "0.0.4"
edition = "2024"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
eframe = "0.29.1"
rfd = "0.14"
directories = "5.0"
image = { version = "0.24", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
winres = "0.1"
