[package]
name = "kinetix-installer"
version = "0.0.6"
edition = "2024"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
eframe = "0.29.1"
rfd = "0.14"
directories = "5.0"
image = { version = "0.24", default-features = false, features = ["png"] }
ureq = { version = "2", features = ["native-tls"] }
zip = "0.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
winres = "0.1"
