[package]
name = "kinetix-kicomp"
version = "0.0.3"
edition = "2024"

[[bin]]
name = "kicomp"
path = "src/main.rs"

[lib]
name = "kinetix_kicomp"
path = "src/lib.rs"

[dependencies]
kinetix-language = { path = "../language" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
bumpalo = "3.19.1"
