[package]
name = "kinetix-kicomp"
version = "0.0.7"
edition = "2024"

[[bin]]
name = "kicomp"
path = "src/main.rs"

[lib]
name = "kinetix_kicomp"
path = "src/lib.rs"

[features]
default = []
llvm = ["dep:inkwell"]

[dependencies]
kinetix-language = { path = "../language" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
bumpalo = "3.19.1"
inkwell = { version = "0.8", features = ["llvm21-1"], optional = true }
