[package]
name = "kinetix-kivm"
version = "0.0.2"
edition = "2024"

[lib]
name = "kinetix_kivm"
path = "src/lib.rs"

[dependencies]
kinetix-kicomp = { path = "../kicomp" }
serde_json = "1.0"
rand = "0.8"
sysinfo = "0.30"
rodio = "0.19"
ureq = { version = "2.9", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
lazy_static = "1.4"
# clap dependency removed as it's now CLI-only
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
minifb = "0.24"
