[package]
name = "kinetix-language"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "kinetix-lang"
path = "src/main.rs"

[lib]
name = "kinetix_language"
path = "src/lib.rs"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
